--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiogram==2.19
 aiohttp==3.8.1
 aioschedule==0.5.2
 aiosignal==1.2.0
+asgiref==3.5.2
 async-timeout==4.0.2
 attrs==21.4.0
 Babel==2.9.1
@@ -10,15 +11,18 @@ CacheControl==0.12.6
 cachy==0.3.0
 certifi==2021.10.8
 cffi==1.14.6
+charset-normalizer==2.0.12
 cleo==0.8.1
 clikit==0.6.2
 colorama==0.4.4
 crashtest==0.3.1
 cryptography==3.4.8
 distlib==0.3.2
+Django==4.0.4
 filelock==3.0.12
 frozenlist==1.3.0
 html5lib==1.1
+idna==3.3
 jeepney==0.7.1
 keyring==21.8.0
 lockfile==0.12.2
@@ -49,6 +53,7 @@ rsa==4.8
 SecretStorage==3.3.1
 shellingham==1.4.0
 six==1.16.0
+sqlparse==0.4.2
 Telethon==1.24.0
 tomlkit==0.7.2
 urllib3==1.26.6
