--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -47,7 +47,7 @@ jobs:
           docker push ${{ env.DOCKER_USER }}/${{ env.DOCKER_REPOSITORY_NAME }}:${{ env.EFCLUB_DJANGO}}-${{ env.EFCLUB_DJANGO_VERSION }}
   deploy:
     runs-on: ubuntu-latest
-    needs: [create_docker_build]
+    needs: [group_bot, efclub_django]
     env:
       WORK_DIR: "/home/${{ secrets.USERNAME }}/deploy/$PROJECT_NAME/$STAGE"
     steps:
