--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -48,8 +48,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: [group_bot, efclub_django]
-    env:
-      WORK_DIR: "/home/${{ secrets.USERNAME }}/deploy/group_bot/dev"
+#    env:
+#      WORK_DIR: "/home/${{ secrets.USERNAME }}/deploy/group_bot/dev"
     steps:
       - name: Git clone
         uses: actions/checkout@v2
@@ -60,10 +60,10 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            cd ${{ env.WORK_DIR }}
-            docker-compose -f docker-compose-${{ env.PROJECT_NAME }}-${{ env.STAGE }}.yaml down
+            cd /home/${{ secrets.USERNAME }}/deploy/group_bot/dev
+            docker-compose -f docker-compose-${{ env.PROJECT_NAME }}-${{ env.STAGE }}.yml down
             docker container rm ${{ env.GROUP_BOT_NAME }}
             docker container rm ${{ env.EFCLUB_DJANGO }}
             docker rmi ${{ env.DOCKER_USER }}/${{ env.DOCKER_REPOSITORY_NAME }}:${{ env.GROUP_BOT_NAME}}-${{ env.GROUP_BOT_VERSION }} -f
             docker rmi ${{ env.DOCKER_USER }}/${{ env.DOCKER_REPOSITORY_NAME }}:${{ env.EFCLUB_DJANGO}}-${{ env.EFCLUB_DJANGO_VERSION }} -f
-            docker-compose -f docker-compose-${{ env.PROJECT_NAME }}-${{ env.STAGE }}.yaml up --force-recreate -d
+            docker-compose -f docker-compose-${{ env.PROJECT_NAME }}-${{ env.STAGE }}.yml up --force-recreate -d
