--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,4 +1,4 @@
-name: channel_admin
+name: group_bot
 env:
   DOCKER_USER: "deskent"
   DOCKER_REPOSITORY_NAME: "deskent"
@@ -7,11 +7,11 @@ env:
   GROUP_BOT_VERSION: "1.0"
   EFCLUB_DJANGO: "efclub_django"
   EFCLUB_DJANGO_VERSION: "1.0"
-  STAGE: "dev"
+  STAGE: "prod"
   VERSION: "ver-${{ github.sha }}"
 on:
   push:
-    branches: [ test ]
+    branches: [ main ]
 jobs:
   group_bot:
     runs-on: ubuntu-latest
@@ -48,8 +48,6 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: [group_bot, efclub_django]
-#    env:
-#      WORK_DIR: "/home/${{ secrets.USERNAME }}/deploy/group_bot/dev"
     steps:
       - name: Git clone
         uses: actions/checkout@v2
@@ -60,7 +58,7 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            cd /home/${{ secrets.USERNAME }}/deploy/group_bot/dev
+            cd /home/${{ secrets.USERNAME }}/deploy/${{ env.PROJECT_NAME }}/${{ env.STAGE }}
             docker-compose -f docker-compose-${{ env.PROJECT_NAME }}-${{ env.STAGE }}.yml down
             docker container rm ${{ env.GROUP_BOT_NAME }}
             docker container rm ${{ env.EFCLUB_DJANGO }}
